[package]
name = "audio-effect-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coreaudio-rs = "0.11.2"
coreaudio-sys = "0.2.12"
cpal = "0.15.2"
dasp = "0.11.0"
dirs = "5.0.1"
eframe = "0.22.0"
hound = "3.5.0"
jack = "0.11.4"
jack-sys = "0.5.1"
kira = "0.8.4"
nom = "7.1.3"
rodio = "0.17.1"
rosc = "0.10.1"
rubato = "0.14.1"
symphonia = "0.5.3"
wav = "1.0.0"
