[package]
name = "audio-effect-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.79"
console_log = "1.0.0"
coreaudio-rs = "0.11.2"
coreaudio-sys = "0.2.12"
cpal = "0.15.2"
dasp = "0.11.0"
dirs = "5.0.1"
eframe = "0.22.0"
flate2 = "1.0.26"
h2 = "0.3.20"
hound = "3.5.0"
http = "0.2.9"
instant = "0.1.12"
io-lifetimes = "2.0.2"
jack = "0.11.4"
jack-sys = "0.5.1"
kira = "0.8.4"
libc = "0.2.147"
mio = "0.8.8"
nom = "7.1.3"
regex = "1.9.1"
reqwest = "0.11.18"
rodio = "0.17.1"
rosc = "0.10.1"
rubato = "0.14.1"
symphonia = "0.5.3"
syn = "2.0.27"
tokio = "1.29.1"
tracing = "0.1.37"
wasi = "0.11.0"
wasm-instrument = "0.4.0"
wasmi = "0.30.0"
wasmparser = "0.110.0"
wav = "1.0.0"
